unpackaged/main/default/objects/pse__Group_Plan__c/fields/pse__Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>pse__Group_Owner__c</fullName>
    <formula>pse__Group__r.pse__Group_Head__r.FirstName &amp; " " &amp; pse__Group__r.pse__Group_Head__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Owner</label>
    <type>Text</type>
</CustomField>