unpackaged/main/default/objects/pse__Group_Plan__c/fields/pse__Group_Plan_For__c.field-meta.xml
<CustomField>
    <fullName>pse__Group_Plan_For__c</fullName>
    <description>Concatenated Group and Time Period Names (with a hyphen, ' - ', in between).</description>
    <formula>pse__Group__r.Name &amp; ' - ' &amp; pse__Time_Period__r.Name</formula>
    <label>Group Plan For</label>
    <type>Text</type>
</CustomField>