unpackaged/main/default/objects/pse__Group_Plan__c/fields/pse__Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Unique_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique system field: concatenation of Group and Time Period IDs with a hyphen ('-') in between</description>
    <inlineHelpText>Unique system field: concatenation of Group and Time Period IDs with a hyphen ('-') in between</inlineHelpText>
    <label>Unique Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>