unpackaged/main/default/objects/pse__Group_Plan__c/validationRules/pse__Plan_must_have_same_currency_as_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Plan_must_have_same_currency_as_Group</fullName>
    <active>true</active>
    <description>A Group Plan record must use the same currency as its parent Group.</description>
    <errorConditionFormula>NOT(TEXT(CurrencyIsoCode) = TEXT(pse__Group__r.CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>A Group Plan record must use the same currency as its parent Group.</errorMessage>
</ValidationRule>