unpackaged/main/default/objects/pse__Group_Plan__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Group_Plan_For__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Group_Owner__c</columns>
    <columns>pse__Time_Period__c</columns>
    <columns>pse__Time_Period_Type__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Planned_Bookings__c</columns>
    <columns>pse__Planned_Billings__c</columns>
    <columns>pse__Planned_Revenue__c</columns>
    <columns>pse__Planned_Internal_Costs__c</columns>
    <columns>pse__Planned_External_Costs__c</columns>
    <columns>pse__Planned_Margin__c</columns>
    <columns>pse__Planned_Utilization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>